k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: espn-soccer
  labels:
    app: espn-soccer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: espn-soccer
  type: ClusterIP
