k8s/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: espn-soccer
  labels:
    app: espn-soccer
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: espn-soccer
    weight: 100
  wildcardPolicy: None
